New website look + feel, also made first login classes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@58 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/WEB-INF/jdbc.properties
+++ b/src/main/webapps/metabolights/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.databaseurl=jdbc:oracle:thin:@muscat.ebi.ac.uk:1541:chezdev
 jdbc.username=chebi_map
-jdbc.password=XXXXXX
+jdbc.password=chebimapper
 jdbc.dialect=org.hibernate.dialect.OracleDialect
