User login added. Removed Contact demo application objects.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@67 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/WEB-INF/jdbc.properties
+++ b/src/main/webapps/metabolights/WEB-INF/jdbc.properties
@@ -1,5 +1,11 @@
+xjdbc.driverClassName=oracle.jdbc.OracleDriver
+xjdbc.databaseurl=jdbc:oracle:thin:@muscat.ebi.ac.uk:1541:chezdev
+xjdbc.username=chebi_map
+xjdbc.password=chebimapper
+xjdbc.dialect=org.hibernate.dialect.OracleDialect
+
 jdbc.driverClassName=oracle.jdbc.OracleDriver
-jdbc.databaseurl=jdbc:oracle:thin:@muscat.ebi.ac.uk:1541:chezdev
-jdbc.username=chebi_map
-jdbc.password=chebimapper
+jdbc.databaseurl=jdbc:oracle:thin:@pernod.ebi.ac.uk:1571:mtapro
+jdbc.username=isatab
+jdbc.password=isatab
 jdbc.dialect=org.hibernate.dialect.OracleDialect
