--- a/src/main/webapps/metabolights/resources/application.properties
+++ b/src/main/webapps/metabolights/resources/application.properties
@@ -1,1 +1,3 @@
 uploadDirectory=/tmp/mtblUpload/
+urlBiiPrefixSearch=http://wwwdev.ebi.ac.uk/mtbl_bii/browse_studies.seam
+urlBiiPrefixStudy=http://wwwdev.ebi.ac.uk/mtbl_bii/study.seam
