--- a/accessionmanager/pom.xml
+++ b/accessionmanager/pom.xml
@@ -5,7 +5,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
  <artifactId>metabolights-accessionmanager</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
- <name>MetaboLights Accession Manager</name>
+ <name>accessionmanager</name>
  <parent>
    <artifactId>metabolights-main</artifactId>
    <groupId>uk.ac.ebi.metabolights</groupId>
