--- a/metabolightsuploader/pom.xml
+++ b/metabolightsuploader/pom.xml
@@ -8,11 +8,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
   <groupId>uk.ac.ebi.metabolights</groupId>
-  <artifactId>metabolightsuploader</artifactId>
+  <artifactId>metabolights-uploader</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>IsaTabIdReplacer</name>
+  <name>metabolightsuploader</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -25,7 +25,7 @@
     	<artifactId>junit</artifactId>
     	<version>4.8.2</version>
     	<type>jar</type>
-    	<scope>compile</scope>
+    	<scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>uk.ac.ebi.metabolights</groupId>
