General maven updates
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@118 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
      <module>metabolightsuploader</module>
      <module>metabolightsutils</module>
      <module>metabolights-model</module>
-     <module>metabolights-webapp</module>
+     <module>metabolights-webapps</module>
   </modules>
   <build>
   <plugins>
