--- a/metabolights-webapps/.project
+++ b/metabolights-webapps/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>metabolights-webapp</name>
+	<name>metabolights-webapps</name>
 	<comment></comment>
 	<projects>
 	</projects>
