Submission ok page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@136 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/resources/application.properties
+++ b/src/main/webapps/metabolights/resources/application.properties
@@ -1,3 +1,9 @@
-uploadDirectory=/tmp/mtblUpload/
+
 urlBiiPrefixSearch=http://wwwdev.ebi.ac.uk/mtbl_bii/browse_studies.seam
 urlBiiPrefixStudy=http://wwwdev.ebi.ac.uk/mtbl_bii/study.seam
+
+ftpServer=ftp-private.ebi.ac.uk
+ftpServerMainSubDir=upload
+ftpUser=
+ftpPassword=
+
