Extending properties with filewithids property.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@144 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolightsuploader/src/main/resources/isatabidreplacer.properties
+++ b/metabolightsuploader/src/main/resources/isatabidreplacer.properties
@@ -1,2 +1,2 @@
-isatab.id.studyid=Study Identifier
-isatab.id.investigationid=Investigation Identifier
+isatab.ids=Study Identifier;Investigation Identifier
+isatab.filewithids=i_Investigation.txt
