Use am_hibernate.cfg.xml instead of the default (hibernate.cfg.xml)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@178 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/accessionmanager/pom.xml
+++ b/accessionmanager/pom.xml
@@ -12,7 +12,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
    <version>0.0.1-SNAPSHOT</version>
  </parent> 
  <build> 
-  <finalName>${artifactId}</finalName>
+  <finalName>${project.artifactId}</finalName>
  </build>
  <dependencies>
  	<dependency>
