--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.ebi.metabolights</groupId>
   <artifactId>metabolights-main</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>MetaboLights main project</name>
   <description>MetaboLights Main Project</description>
@@ -14,15 +14,23 @@
      <module>metabolights-webapps</module>
      <module>specview</module>
   </modules>
+  
   <build>
-  <plugins>
-  	<plugin>
+    <plugins>
+  	  <plugin>
   		<groupId>org.apache.maven.plugins</groupId>
   		<artifactId>maven-compiler-plugin</artifactId>
   		<version>2.3.2</version>
-  	</plugin>
-  </plugins>
+  	  </plugin>
+    </plugins>
   </build>
+  
+  <!-- Shared version number properties -->
+  <properties>
+    <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
+    <org.springsource.version>3.1.0.RC1</org.springsource.version>
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>mysql</groupId>
@@ -44,53 +52,6 @@
  		<scope>compile</scope>
  	</dependency>
   	<dependency>
- 		<groupId>javassist</groupId>
- 		<artifactId>javassist</artifactId>
- 		<version>3.12.1.GA</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>	
- 	<dependency>
- 		<groupId>org.apache.lucene</groupId>
- 		<artifactId>lucene-core</artifactId>
- 		<version>3.1.0</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
-         <groupId>oracle</groupId>
-         <artifactId>ojdbc6</artifactId>
-         <version>11.2.0.2</version>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-aop</artifactId>
- 		<version>3.0.5.RELEASE</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-context</artifactId>
- 		<version>3.0.5.RELEASE</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-orm</artifactId>
- 		<version>3.0.5.RELEASE</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-web</artifactId>
- 		<version>3.0.5.RELEASE</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
  		<groupId>org.hibernate</groupId>
  		<artifactId>hibernate</artifactId>
  		<version>3.2.7.ga</version>
@@ -110,30 +71,75 @@
  		<version>1.2.15</version>
  	 	<type>jar</type>	
  		<scope>compile</scope>
+ 	</dependency>	
+  	<dependency>
+ 		<groupId>javassist</groupId>
+ 		<artifactId>javassist</artifactId>
+ 		<version>3.12.1.GA</version>
+ 		<type>jar</type>
+ 		<scope>compile</scope>
+ 	</dependency>	
+ 	<dependency>
+ 		<groupId>org.apache.lucene</groupId>
+ 		<artifactId>lucene-core</artifactId>
+ 		<version>3.1.0</version>
+ 		<type>jar</type>
+ 		<scope>compile</scope>
  	</dependency>
+ 	<dependency>
+         <groupId>oracle</groupId>
+         <artifactId>ojdbc6</artifactId>
+         <version>11.2.0.2</version>
+ 	</dependency>
+<!--  <dependency>
+ 		<groupId>org.springframework</groupId>
+ 		<artifactId>spring-aop</artifactId>
+ 		<version>${org.springframework.version}</version>
+ 		<type>jar</type>
+ 		<scope>compile</scope>
+ 	</dependency>
+ 	<dependency>
+ 		<groupId>org.springframework</groupId>
+ 		<artifactId>spring-context</artifactId>
+ 		<version>${org.springframework.version}</version>
+ 		<type>jar</type>
+ 		<scope>compile</scope>
+ 	</dependency>
+ 	<dependency>
+ 		<groupId>org.springframework</groupId>
+ 		<artifactId>spring-orm</artifactId>
+ 		<version>${org.springframework.version}</version>
+ 		<type>jar</type>
+ 		<scope>compile</scope>
+ 	</dependency>
+ 	<dependency>
+ 		<groupId>org.springframework</groupId>
+ 		<artifactId>spring-web</artifactId>
+ 		<version>${org.springframework.version}</version>
+ 		<type>jar</type>
+ 		<scope>compile</scope>
+ 	</dependency>
+ 	<dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${org.springsource.version}</version>
+    </dependency>
  	<dependency>
  		<groupId>org.springframework.security</groupId>
  		<artifactId>spring-security-config</artifactId>
- 		<version>3.0.5.RELEASE</version>
+ 		<version>${org.springsource.version}</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework.security</groupId>
  		<artifactId>spring-security-taglibs</artifactId>
- 		<version>3.0.5.RELEASE</version>
+ 		<version>${org.springsource.version}</version>
  		<type>jar</type>
  		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>javassist</groupId>
- 		<artifactId>javassist</artifactId>
- 		<version>3.12.1.GA</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
+ 	</dependency> -->
   </dependencies>  
-   <!-- Deploying to ChEBI remote repository -->
+  
    <distributionManagement>
     <repository>
       <id>chebi-repo</id>
@@ -153,6 +159,16 @@
      </site>
   </distributionManagement>  
   
-  
+  <!--  Additional repositories for Spring milestone builds, remove when 3.1 is production -->
+  <repositories>
+     <repository>
+        <id>Springframework milestone</id>
+        <url>http://maven.springframework.org/milestone</url>
+     </repository>  
+          <repository>
+        <id>Springsource repos</id>
+        <url>www.springsource.com/repository</url>
+     </repository>  
+  </repositories>  
   
 </project>
