--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -42,13 +42,6 @@
   		<scope>compile</scope>
   	</dependency>
   	<dependency>
-  		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-validator</artifactId>
-  		<version>4.0.2.GA</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
   		<groupId>commons-io</groupId>
   		<artifactId>commons-io</artifactId>
   		<version>2.0.1</version>
@@ -85,10 +78,24 @@
  	</dependency> 	
   	<dependency>
   		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-jdk14</artifactId>
+  		<artifactId>slf4j-api</artifactId>
   		<version>1.6.1</version>
   		<type>jar</type>
   		<scope>compile</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-log4j12</artifactId>
+  		<version>1.6.1</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-validator</artifactId>
+  		<version>4.0.2.GA</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>  	
   </dependencies>
 </project>
