--- a/metabolights-webapps/.classpath
+++ b/metabolights-webapps/.classpath
@@ -1,38 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="target/classes" path="src/main/java"/>
+	<classpathentry kind="src" path="src/main/webapps/metabolights/resources"/>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources"/>
-	<classpathentry kind="src" path="src/main/webapps/metabolights/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0">
 		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/spring-security-core-3.1.0.RC1.jar" sourcepath="src/main/webapps/metabolights/WEB-INF/lib/spring-security-core-3.1.0.RC1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/spring-security-config-3.1.0.RC1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/spring-security-taglibs-3.1.0.RC1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/spring-security-web-3.1.0.RC1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.transaction-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.web.servlet-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.aop-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.asm-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.beans-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.context-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.core-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.expression-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.jdbc-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.orm-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/org.springframework.web-3.1.0.M1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/ftp4j-1.6.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/hibernate-search-analyzers-3.4.0.Alpha1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/jstl-api-1.2.jar"/>
-	<classpathentry kind="lib" path="src/main/webapps/metabolights/WEB-INF/lib/jstl-impl-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
