Added new properties to template
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@314 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapps/metabolights/resources/application.properties.template
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/application.properties.template
@@ -1,6 +1,8 @@
 
 urlBiiPrefixSearch=http://CHANGE/browse_studies.seam
 urlBiiPrefixStudy=http://CHANGE/study.seam
+urlConfirmNewAccount=http://CHANGE/confirmAccountRequest
+urlActivateNewAccount=http://CHANGE/activateAccount__NotifyUser
 
 ftpServer=CHANGE
 ftpServerMainSubDir=upload
