--- a/metabolights-model/.settings/org.hibernate.eclipse.console.prefs
+++ b/metabolights-model/.settings/org.hibernate.eclipse.console.prefs
@@ -1,4 +1,4 @@
-#Tue May 03 14:19:36 BST 2011
-default.configuration=
+#Fri May 27 09:47:30 BST 2011
+default.configuration=metabolights-model (isatabdb)
 eclipse.preferences.version=1
 hibernate3.enabled=true
