--- a/metabolights-model/pom.xml
+++ b/metabolights-model/pom.xml
@@ -3,11 +3,75 @@
   <parent>
     <artifactId>metabolights-main</artifactId>
     <groupId>uk.ac.ebi.metabolights</groupId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
   <groupId>uk.ac.ebi.metabolights</groupId>
   <artifactId>metabolights-model</artifactId>
   <name>metabolights-model</name>
   <version>0.0.2-SNAPSHOT</version>
-  <description>MetaboLights Model Objects</description>
+  <description>MetaboLights Model Objects, includes ISA Tools domain model</description>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-beans</artifactId>
+  		<version>3.0.5.RELEASE</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context</artifactId>
+  		<version>3.0.5.RELEASE</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>uk.ac.ebi</groupId>
+  		<artifactId>jutils</artifactId>
+  		<version>1.1</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>net.sf.opencsv</groupId>
+  		<artifactId>opencsv</artifactId>
+  		<version>2.1</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>	
+   	<dependency>
+  		<groupId>org.apache.lucene</groupId>
+  		<artifactId>lucene-queries</artifactId>
+  		<version>2.9.2</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency> 	
+  	<dependency>
+  		<groupId>org.apache.lucene</groupId>
+  		<artifactId>lucene-misc</artifactId>
+  		<version>2.9.2</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-beanutils</groupId>
+  		<artifactId>commons-beanutils</artifactId>
+  		<version>1.8.3</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-lang</groupId>
+  		<artifactId>commons-lang</artifactId>
+  		<version>2.6</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>uk.ac.ebi.metabolights</groupId>
+  		<artifactId>metabolights-utils</artifactId>
+  		<version>0.0.3-SNAPSHOT</version>
+  		<scope>compile</scope>
+  	</dependency>
+  </dependencies>
 </project>
