--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -97,5 +97,12 @@
   		<type>jar</type>
   		<scope>compile</scope>
   	</dependency>  	
+  	<dependency>
+  		<groupId>uk.ac.ebi.metabolights<groupId>
+  		<artifactId>metabolights-uploader</artifactId>
+  		<version>0.0.4-SNAPSHOT</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
   </dependencies>
 </project>
