Missing bracket, typo
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@362 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -98,7 +98,7 @@
   		<scope>compile</scope>
   	</dependency>  	
   	<dependency>
-  		<groupId>uk.ac.ebi.metabolights<groupId>
+  		<groupId>uk.ac.ebi.metabolights</groupId>
   		<artifactId>metabolights-uploader</artifactId>
   		<version>0.0.4-SNAPSHOT</version>
   		<type>jar</type>
