--- a/metabolightsuploader/pom.xml
+++ b/metabolightsuploader/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>metabolights-main</artifactId>
 		<groupId>uk.ac.ebi.metabolights</groupId>
@@ -7,43 +7,53 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>uk.ac.ebi.metabolights</groupId>
-  <artifactId>metabolights-uploader</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>uk.ac.ebi.metabolights</groupId>
+	<artifactId>metabolights-uploader</artifactId>
+	<version>0.0.4-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>metabolightsuploader</name>
-  <url>http://maven.apache.org</url>
+	<name>metabolightsuploader</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-    	<groupId>junit</groupId>
-    	<artifactId>junit</artifactId>
-    	<version>4.8.2</version>
-    	<type>jar</type>
-    	<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>uk.ac.ebi.metabolights</groupId>
-    	<artifactId>metabolights-accessionmanager</artifactId>
-    	<version>0.0.2-SNAPSHOT</version>
-    	<scope>compile</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.isatools.isatab</groupId>
-    	<artifactId>ISAtools-import-deps-FORK</artifactId>
-    	<version>1.2.1.3</version>
-    	<type>jar</type>
-    </dependency>
-    <dependency>
-    	<groupId>uk.ac.ebi.metabolights</groupId>
-    	<artifactId>metabolights-utils</artifactId>
-    	<version>0.0.3-SNAPSHOT</version>
-    	<scope>compile</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.metabolights</groupId>
+			<artifactId>metabolights-accessionmanager</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.metabolights</groupId>
+			<artifactId>metabolights-utils</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.isatools.isatab</groupId>
+			<artifactId>ISAtools-import-deps-FORK</artifactId>
+			<version>1.2.1.3</version>
+			<type>jar</type>
+			<exclusions>
+				<exclusion>
+					<artifactId>hibernate-core</artifactId>
+					<groupId>org.hibernate</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>lucene-core</artifactId>
+					<groupId>org.apache.lucene</groupId>
+				</exclusion>
+			</exclusions>			
+		</dependency>
+	</dependencies>
 </project>
