--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
  	<dependency>
  		<groupId>org.apache.lucene</groupId>
  		<artifactId>lucene-core</artifactId>
- 		<version>3.2.0</version>
+ 		<version>2.9.2</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
@@ -93,7 +93,7 @@
  	<dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
-        <version>${org.spring.version}</version>
+        <version>3.1.0.RC1</version>
     </dependency> 	
  	<dependency>
  		<groupId>org.springframework</groupId>
