--- a/metabolights-model/pom.xml
+++ b/metabolights-model/pom.xml
@@ -59,5 +59,12 @@
   		<version>0.0.3-SNAPSHOT</version>
   		<scope>compile</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-search</artifactId>
+  		<version>3.4.0.Final</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
   </dependencies>
 </project>
