git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@387 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,12 @@
   </properties>
   
   <dependencies>
-    <dependency>
+    <!-- dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.15</version>
       <scope>runtime</scope>
-    </dependency>
+    </dependency-->
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
