Move StableID.cfg.xml to resources folder
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@389 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/accessionmanager/src/test/resources/am_hibernate.cfg.xml.template
+++ b/accessionmanager/src/test/resources/am_hibernate.cfg.xml.template
@@ -22,6 +22,6 @@
 		<property name="show_sql">true</property> 
 		<!-- Drop and re-create the database schema on startup -->
 		<property name="hbm2ddl.auto">update</property>
-		<mapping resource="uk/ac/ebi/metabolights/repository/accessionmanager/StableId.hbm.xml"/>
+		<mapping resource="StableId.hbm.xml"/>
 	</session-factory>
 </hibernate-configuration>
