Adding some properties
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@396 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/application.properties
+++ b/metabolights-webapps/src/main/webapp/resources/application.properties
@@ -7,3 +7,8 @@ ftpServerMainSubDir=upload
 ftpUser=
 ftpPassword=
 
+uploadDirectory=/ebi/ftp/private/mtblight
+mtblAdminEmailAddress=admin@metabolights.com
+
+urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/mtbl/confirmAccountRequest
+urlActivateNewAccount=http://wwwdev.ebi.ac.uk/mtbl/activateAccount__NotifyUser
