Add new libraries with Logic validation update
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@437 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -138,14 +138,20 @@
 		<dependency>
 			<groupId>uk.ac.ebi.metabolights</groupId>
 			<artifactId>metabolights-utils</artifactId>
-			<version>0.0.3-SNAPSHOT</version>
+			<version>0.0.4-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>uk.ac.ebi.metabolights</groupId>
 			<artifactId>metabolights-uploader</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.0.5-SNAPSHOT</version>
 			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.isatools.isatab</groupId>
+			<artifactId>ISAtools-import-deps-FORK</artifactId>
+			<version>1.2.1.4</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
