--- a/metabolights-webapps/src/main/webapp/resources/jdbc.properties
+++ b/metabolights-webapps/src/main/webapp/resources/jdbc.properties
@@ -1,5 +1,10 @@
 jdbc.driverClassName=oracle.jdbc.OracleDriver
-jdbc.databaseurl=jdbc:oracle:thin:@host:port:sid
-jdbc.username=username
-jdbc.password=password
+jdbc.databaseurl=jdbc:oracle:thin:@pernod.ebi.ac.uk:1571:MTAPRO
+jdbc.username=isatab
+jdbc.password=isatab
 jdbc.dialect=org.hibernate.dialect.OracleDialect
+jdbc.initialPoolSize=2
+jdbc.minPoolSize=2
+jdbc.maxPoolSize=5
+jdbc.maxIdleTime=120
+jdbc.autoCommitOnClose=true
