Change templates to new paths for index and file upload
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@507 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/application.properties.template
+++ b/metabolights-webapps/src/main/webapp/resources/application.properties.template
@@ -9,6 +9,8 @@ ftpServerMainSubDir=upload
 ftpUser=CHANGE
 ftpPassword=CHANGE
 
-uploadDirectory=/ebi/ftp/private/mtblight
+uploadDirectory=/ebi/ftp/private/mtblight/isatab
 
-luceneIndexDirectory=/ebi/bii/luceneindex/
+mtblAdminEmailAddress=admin@metabolights.com
+
+luceneIndexDirectory=/ebi/sp/pro1/metabolights/lucene/bii
