remove connection data
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@510 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/jdbc.properties
+++ b/metabolights-webapps/src/main/webapp/resources/jdbc.properties
@@ -1,8 +1,11 @@
+jdbc.username=CHANGEME
+jdbc.password=CHANGEME
+
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.databaseurl=jdbc:oracle:thin:@pernod.ebi.ac.uk:1571:MTAPRO
-jdbc.username=isatab
-jdbc.password=isatab
 jdbc.dialect=org.hibernate.dialect.OracleDialect
+
+
 jdbc.initialPoolSize=2
 jdbc.minPoolSize=2
 jdbc.maxPoolSize=5
