Detail page update
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@519 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/application.properties
+++ b/metabolights-webapps/src/main/webapp/resources/application.properties
@@ -6,11 +6,14 @@ urlActivateNewAccount=http://wwwdev.ebi.ac.uk/mtbl/activateAccount__NotifyUser
 
 ftpServer=ftp-private.ebi.ac.uk
 ftpServerMainSubDir=upload
-ftpUser=
-ftpPassword=
+ftpUser=mtblight
+ftpPassword=gs4qYabh
 
 uploadDirectory=/ebi/ftp/private/mtblight/isatab
 
 mtblAdminEmailAddress=admin@metabolights.com
 
-luceneIndexDirectory=/ebi/sp/pro1/metabolights/lucene/bii
+urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/mtbl/confirmAccountRequest
+urlActivateNewAccount=http://wwwdev.ebi.ac.uk/mtbl/activateAccount__NotifyUser
+
+luceneIndexDirectory=/tmp/bii/luceneindex/bii/
