--- a/metabolights-webapps/src/main/webapp/resources/jdbc.properties
+++ b/metabolights-webapps/src/main/webapp/resources/jdbc.properties
@@ -4,10 +4,10 @@ jdbc.password=CHANGEME
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.databaseurl=jdbc:oracle:thin:@pernod.ebi.ac.uk:1571:MTAPRO
 jdbc.dialect=org.hibernate.dialect.OracleDialect
-
-
-jdbc.initialPoolSize=2
-jdbc.minPoolSize=2
-jdbc.maxPoolSize=5
-jdbc.maxIdleTime=120
-jdbc.autoCommitOnClose=true
+jdbc.initialPoolSize=3
+jdbc.minPoolSize=3
+jdbc.maxPoolSize=40
+# How long to keep unused connections around (in seconds)
+jdbc.maxIdleTime=25200  
+# Make true?
+jdbc.autoCommitOnClose=false
