delete user and passwords
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@527 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/application.properties
+++ b/metabolights-webapps/src/main/webapp/resources/application.properties
@@ -6,14 +6,11 @@ urlActivateNewAccount=http://wwwdev.ebi.ac.uk/mtbl/activateAccount__NotifyUser
 
 ftpServer=ftp-private.ebi.ac.uk
 ftpServerMainSubDir=upload
-ftpUser=mtblight
-ftpPassword=gs4qYabh
+ftpUser=
+ftpPassword=
 
 uploadDirectory=/ebi/ftp/private/mtblight/isatab
 
 mtblAdminEmailAddress=admin@metabolights.com
-
-urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/mtbl/confirmAccountRequest
-urlActivateNewAccount=http://wwwdev.ebi.ac.uk/mtbl/activateAccount__NotifyUser
 
 luceneIndexDirectory=/ebi/sp/pro1/metabolights/lucene/bii
