Changes: - made email address the username - added affiliation url (also to .sql file) - made the filter div box only claim width when necessary - removed jdbc.properties and moved these into application.properties. It's easy to have only one, which can then be refered in spring servlet xml - removed isatab blur from about page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@561 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/application.properties.template
+++ b/metabolights-webapps/src/main/webapp/resources/application.properties.template
@@ -1,16 +1,22 @@
-
-urlBiiPrefixSearch=http://wwwdev.ebi.ac.uk/mtbl_bii/browse_studies.seam
-urlBiiPrefixStudy=http://wwwdev.ebi.ac.uk/mtbl_bii/study.seam
 urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/mtbl_bii/confirmAccountRequest
 urlActivateNewAccount=http://wwwdev.ebi.ac.uk/mtbl_bii/activateAccount__NotifyUser
-
 ftpServer=CHANGE
 ftpServerMainSubDir=upload
 ftpUser=CHANGE
 ftpPassword=CHANGE
-
 uploadDirectory=/ebi/ftp/private/mtblight/isatab
-
 mtblAdminEmailAddress=admin@metabolights.com
-
-luceneIndexDirectory=/ebi/sp/pro1/metabolights/lucene/bii
+luceneIndexDirectory=/tmp/bii/luceneindex/bii/
+luceneIndexDirectoryShort=/tmp/bii/luceneindex/
+jdbc.driverClassName=oracle.jdbc.OracleDriver
+jdbc.databaseurl=jdbc:oracle:thin:@CHANGE:1521:CHANGE
+jdbc.username=CHANGE
+jdbc.password=CHANGE
+jdbc.dialect=org.hibernate.dialect.OracleDialect
+jdbc.initialPoolSize=CHANGE
+jdbc.minPoolSize=CHANGE
+jdbc.maxPoolSize=CHANGE
+jdbc.maxIdleTime=CHANGE
+jdbc.autoCommitOnClose=CHANGE
+jdbc.show_sql=false
+jdbc.format_sql=false
